Update names and descriptions

--- a/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/DOCKER/notebooks/Explore Diabetes Vantage.ipynb
+++ b/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/DOCKER/notebooks/Explore Diabetes Vantage.ipynb
@@ -31,38 +31,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Username:  aoa_service_user\n",
-      "Password: ········\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.6/site-packages/teradataml/context/context.py:144: UserWarning: [Teradata][teradataml](TDML_2002) Overwriting an existing context associated with Teradata connection. Most of the operations on any teradataml DataFrames created before this will not work.\n",
-      "  warnings.warn(Messages.get_message(MessageCodes.OVERWRITE_CONTEXT))\n"
+      "Username: Vantage\n",
+      "Password:········\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Engine(teradatasql://aoa_service_user:***@tddb-env-d-268.vantage.demo.intellicloud.teradata.com)"
+       "Engine(teradatasql://Vantage:***@tddb-env-d-425.vantage.demo.intellicloud.teradata.com)"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "host = 'tddb-env-d-268.vantage.demo.intellicloud.teradata.com'\n",
+    "host = 'tddb-env-d-425.vantage.demo.intellicloud.teradata.com'\n",
     "username = input(\"Username: \")\n",
     "password = getpass.getpass(\"Password:\")\n",
     "create_context(host=host, username=username, password=password)"
@@ -1021,7 +1013,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
