issue #126 improve pyspark model artefact support

--- a/model_definitions/149e31ed-c554-46b4-95d2-00c5c43320fb/notebooks/Sample pyspark LR.ipynb
+++ b/model_definitions/149e31ed-c554-46b4-95d2-00c5c43320fb/notebooks/Sample pyspark LR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,18 +10,18 @@
       "text/html": [
        "\n",
        "            <div>\n",
-       "                <p><b>SparkSession - hive</b></p>\n",
+       "                <p><b>SparkSession - in-memory</b></p>\n",
        "                \n",
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://10.226.7.139:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://10.226.1.115:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
-       "                <dd><code>v2.2.2</code></dd>\n",
+       "                <dd><code>v2.4.3</code></dd>\n",
        "              <dt>Master</dt>\n",
-       "                <dd><code>local[1]</code></dd>\n",
+       "                <dd><code>local[*]</code></dd>\n",
        "              <dt>AppName</dt>\n",
        "                <dd><code>pyspark-shell</code></dd>\n",
        "            </dl>\n",
@@ -31,10 +31,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x11c809898>"
+       "<pyspark.sql.session.SparkSession at 0x11a9d7b38>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,17 +45,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.conf.set(\"spark.aoa.modelPath\", \"/tmp/aoa/spark\")\n",
+    "\n",
+    "dataset_url = \"https://raw.githubusercontent.com/apache/spark/branch-2.4/data/mllib/sample_libsvm_data.txt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %%writefile ../training.py\n",
+    "import logging\n",
+    "\n",
     "from pyspark.ml.classification import LogisticRegression\n",
     "from pyspark import SparkConf\n",
     "from pyspark.sql import SparkSession\n",
-    "\n",
-    "import logging\n",
-    "import urllib.request\n",
+    "from pyspark.sql.functions import monotonically_increasing_id \n",
     "\n",
     "logging.getLogger(\"py4j\").setLevel(logging.ERROR)\n",
     "\n",
@@ -65,71 +76,36 @@
     "    .getOrCreate()\n",
     "\n",
     "\n",
-    "def train(spark, data_conf, model_conf, **kwargs):\n",
-    "    hyperparams = model_conf[\"hyperParameters\"]\n",
-    "\n",
+    "def read_dataset_from_url(spark, url):\n",
     "    # for this demo we're downloading the dataset locally and then reading it. This is obviously not production setting\n",
     "    # https://raw.githubusercontent.com/apache/spark/branch-2.4/data/mllib/sample_libsvm_data.txt\n",
-    "    urllib.request.urlretrieve(data_conf[\"url\"], \"/tmp/data.txt\")\n",
+    "    urllib.request.urlretrieve(url, \"/tmp/data.txt\")\n",
+    "    return spark.read.format(\"libsvm\").load(\"/tmp/data.txt\")\n",
     "\n",
-    "    training = spark.read.format(\"libsvm\").load(\"/tmp/data.txt\")\n",
     "\n",
-    "    lr = LogisticRegression(maxIter=hyperparams[\"maxIter\"],\n",
-    "                            regParam=hyperparams[\"regParam\"],\n",
-    "                            elasticNetParam=hyperparams[\"elasticNetParam\"])\n",
+    "train = read_dataset_from_url(spark, dataset_url)\n",
     "\n",
-    "    print(\"Starting training...\")\n",
+    "lr = LogisticRegression(maxIter=10,\n",
+    "                        regParam=0.3,\n",
+    "                        elasticNetParam=0.8)\n",
     "\n",
-    "    lr_model = lr.fit(training)\n",
+    "logging.info(\"Starting training...\")\n",
     "\n",
-    "    # Print the coefficients and intercept for logistic regression\n",
-    "    print(\"Coefficients: {}\".format(str(lr_model.coefficients)))\n",
-    "    print(\"Intercept: {}\".format(str(lr_model.intercept)))\n",
+    "lr_model = lr.fit(train)\n",
     "\n",
-    "    print(\"Finished training\")\n",
+    "# Print the coefficients and intercept for logistic regression\n",
+    "logging.debug(\"Coefficients: {}\".format(str(lr_model.coefficients)))\n",
+    "logging.debug(\"Intercept: {}\".format(str(lr_model.intercept)))\n",
     "\n",
-    "    # export model artefacts to models/ folder\n",
+    "logging.info(\"Finished training\")\n",
     "\n",
-    "    print(\"Saved trained model\")\n",
-    "    lr_model.write().overwrite() \\\n",
-    "        .save(data_conf[\"model_path\"])\n",
-    "\n",
-    "    return lr_model"
+    "lr_model.write().overwrite().save(spark.conf.get(\"spark.aoa.modelPath\"))\n",
+    "logging.info(\"Saved trained model\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting training...\n",
-      "Coefficients: (692,[244,263,272,300,301,328,350,351,378,379,405,406,407,428,433,434,455,456,461,462,483,484,489,490,496,511,512,517,539,540,568],[-7.353983524188197e-05,-9.102738505589466e-05,-0.00019467430546904298,-0.00020300642473486668,-3.1476183314863995e-05,-6.842977602660743e-05,1.5883626898239883e-05,1.4023497091372047e-05,0.00035432047524968605,0.00011443272898171087,0.00010016712383666666,0.0006014109303795481,0.0002840248179122762,-0.00011541084736508837,0.000385996886312906,0.000635019557424107,-0.00011506412384575676,-0.00015271865864986808,0.0002804933808994214,0.0006070117471191634,-0.0002008459663247437,-0.0001421075579290126,0.0002739010341160883,0.00027730456244968115,-9.838027027269332e-05,-0.0003808522443517704,-0.00025315198008555033,0.00027747714770754307,-0.0002443619763919199,-0.0015394744687597765,-0.00023073328411331293])\n",
-      "Intercept: 0.22456315961250325\n",
-      "Finished training\n",
-      "Saved trained model\n"
-     ]
-    }
-   ],
-   "source": [
-    "import json\n",
-    "\n",
-    "model_conf = json.load(open(\"../config.json\", \"r\"))\n",
-    "data_conf = {\n",
-    "    \"url\": \"https://raw.githubusercontent.com/apache/spark/branch-2.4/data/mllib/sample_libsvm_data.txt\",\n",
-    "    \"test_split\": 0.2,\n",
-    "    \"model_path\": \"file:///tmp/lr\"\n",
-    "}\n",
-    "\n",
-    "lr_model = train(spark, data_conf, model_conf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -165,27 +141,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----+--------------------+--------------------+--------------------+----------+\n",
-      "|label|            features|       rawPrediction|         probability|prediction|\n",
-      "+-----+--------------------+--------------------+--------------------+----------+\n",
-      "|  0.0|(692,[127,128,129...|[0.73765439548910...|[0.67648272431605...|       0.0|\n",
-      "|  1.0|(692,[158,159,160...|[-1.2286964884747...|[0.22640965216205...|       1.0|\n",
-      "|  1.0|(692,[124,125,126...|[-1.2596645795726...|[0.22103163838284...|       1.0|\n",
-      "|  1.0|(692,[152,153,154...|[-1.0845333752697...|[0.25264907653471...|       1.0|\n",
-      "|  1.0|(692,[151,152,153...|[-1.2371063245185...|[0.22494007343582...|       1.0|\n",
-      "|  0.0|(692,[129,130,131...|[0.73839617859787...|[0.67664504514663...|       0.0|\n",
-      "|  1.0|(692,[158,159,160...|[-1.2123284339889...|[0.22928932070495...|       1.0|\n",
-      "|  1.0|(692,[99,100,101,...|[-0.2350856805053...|[0.44149776057216...|       1.0|\n",
-      "|  0.0|(692,[154,155,156...|[0.10357406008713...|[0.52587039191803...|       0.0|\n",
-      "|  0.0|(692,[127,128,129...|[0.72217476589208...|[0.67308573545409...|       0.0|\n",
-      "+-----+--------------------+--------------------+--------------------+----------+\n",
+      "+-----+--------------------+---+--------------------+--------------------+----------+\n",
+      "|label|            features| id|       rawPrediction|         probability|prediction|\n",
+      "+-----+--------------------+---+--------------------+--------------------+----------+\n",
+      "|  0.0|(692,[127,128,129...|  0|[0.73765439548910...|[0.67648272431605...|       0.0|\n",
+      "|  1.0|(692,[158,159,160...|  1|[-1.2286964884747...|[0.22640965216205...|       1.0|\n",
+      "|  1.0|(692,[124,125,126...|  2|[-1.2596645795726...|[0.22103163838284...|       1.0|\n",
+      "|  1.0|(692,[152,153,154...|  3|[-1.0845333752697...|[0.25264907653471...|       1.0|\n",
+      "|  1.0|(692,[151,152,153...|  4|[-1.2371063245185...|[0.22494007343582...|       1.0|\n",
+      "|  0.0|(692,[129,130,131...|  5|[0.73839617859787...|[0.67664504514663...|       0.0|\n",
+      "|  1.0|(692,[158,159,160...|  6|[-1.2123284339889...|[0.22928932070495...|       1.0|\n",
+      "|  1.0|(692,[99,100,101,...|  7|[-0.2350856805053...|[0.44149776057216...|       1.0|\n",
+      "|  0.0|(692,[154,155,156...|  8|[0.10357406008713...|[0.52587039191803...|       0.0|\n",
+      "|  0.0|(692,[127,128,129...|  9|[0.72217476589208...|[0.67308573545409...|       0.0|\n",
+      "+-----+--------------------+---+--------------------+--------------------+----------+\n",
       "only showing top 10 rows\n",
       "\n"
      ]
@@ -193,16 +169,52 @@
    ],
    "source": [
     "from pyspark.ml.classification import LogisticRegressionModel\n",
-    "lr_model = LogisticRegressionModel.load(\"file:///tmp/lr\")\n",
+    "lr_model = LogisticRegressionModel.load(spark.conf.get(\"spark.aoa.modelPath\"))\n",
     "\n",
-    "test = spark.read.format(\"libsvm\").load(\"/tmp/data.txt\")\n",
+    "test = read_dataset_from_url(spark, \"https://raw.githubusercontent.com/apache/spark/branch-2.4/data/mllib/sample_libsvm_data.txt\")\n",
+    "\n",
+    "# add rowId for comparison later\n",
+    "test = test.select(\"*\").withColumn(\"id\", monotonically_increasing_id())\n",
+    "\n",
     "predictions = lr_model.transform(test)\n",
     "predictions.show(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+\n",
+      "|       rawPrediction|\n",
+      "+--------------------+\n",
+      "|[0.73765439548910...|\n",
+      "|[-1.2286964884747...|\n",
+      "|[-1.2596645795726...|\n",
+      "|[-1.0845333752697...|\n",
+      "|[-1.2371063245185...|\n",
+      "|[0.73839617859787...|\n",
+      "|[-1.2123284339889...|\n",
+      "|[-0.2350856805053...|\n",
+      "|[0.10357406008713...|\n",
+      "|[0.72217476589208...|\n",
+      "+--------------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions.select(\"rawPrediction\").show(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -221,66 +233,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %%writefile ../scoring.py\n",
-    "import json\n",
-    "import logging\n",
-    "import urllib.request\n",
-    "\n",
-    "from pyspark.ml.classification import LogisticRegressionModel\n",
-    "from pyspark.ml.evaluation import BinaryClassificationEvaluator\n",
-    "from pyspark import SparkConf\n",
-    "from pyspark.sql import SparkSession\n",
-    "\n",
-    "logging.getLogger(\"py4j\").setLevel(logging.ERROR)\n",
-    "\n",
-    "# spark name and other properties are set by the framework launcher in spark-submit. don't override\n",
-    "spark = SparkSession.builder \\\n",
-    "    .config(conf=SparkConf()) \\\n",
-    "    .getOrCreate()\n",
-    "\n",
-    "\n",
-    "def evaluate(spark, data_conf, model_conf, **kwargs):\n",
-    "    lr_model = LogisticRegressionModel.load(data_conf[\"model_path\"])\n",
-    "\n",
-    "    # for this demo we're downloading the dataset locally and then reading it. This is obviously not production setting\n",
-    "    # https://raw.githubusercontent.com/apache/spark/branch-2.4/data/mllib/sample_libsvm_data.txt\n",
-    "    urllib.request.urlretrieve(data_conf[\"url\"], \"/tmp/data.txt\")\n",
-    "\n",
-    "    test = spark.read.format(\"libsvm\").load(\"/tmp/data.txt\")\n",
-    "\n",
-    "    predictions = lr_model.transform(test)\n",
-    "\n",
-    "    evaluator = BinaryClassificationEvaluator()\n",
-    "    roc = evaluator.evaluate(predictions)\n",
-    "    print('Test Area Under ROC: {}'.format(roc))\n",
-    "\n",
-    "    with open(\"models/evaluation.json\", \"w+\") as f:\n",
-    "        json.dump({'roc': roc}, f)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Area Under ROC: 1.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "evaluate(spark, data_conf, model_conf)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -289,9 +241,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyspark 2.2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pyspark"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
