--- a/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/notebooks/Explore Diabetes Vantage.ipynb
+++ b/model_definitions/920ebf0e-1f0e-442a-94d1-214f63b8b820/notebooks/Explore Diabetes Vantage.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "Engine(teradatasql://Vantage:***@tddb-env-d-425.vantage.demo.intellicloud.teradata.com)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,26 +58,6 @@
     "username = input(\"Username: \")\n",
     "password = getpass.getpass(\"Password:\")\n",
     "create_context(host=host, username=username, password=password)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x7fa02d4b1400>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#get_connection().execute('database DEMO')"
    ]
   },
   {
@@ -232,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +230,7 @@
        "(600, 10)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +259,7 @@
        "std         3.362  11.822        .476    16.005       116.491  173.349    32.658    8.01      .337   19.36"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,30 +353,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/wf250003/anaconda3/envs/caixa/lib/python3.5/re.py:203: FutureWarning: split() requires a non-empty pattern match.\n",
-      "  return _compile(pattern, flags).split(string, maxsplit)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "SELECT * FROM XGBoost(\n",
       "\tON \"PIMA_TRAIN\" AS InputTable\n",
-      "\tOUT TABLE OutputTable(VANTAGE.ml__td_xgboost0_1568215804686830)\n",
+      "\tOUT TABLE OutputTable(VANTAGE.ml__td_xgboost0_1568278597272588)\n",
       "\tUSING\n",
       "\tIdColumn('\"idx\"')\n",
       "\tMaxDepth('10')\n",
       "\tResponseColumn('\"HasDiabetes\"')\n",
       "\tNumericInputs('\"NumTimesPrg\"','\"PlGlcConc\"','\"BloodP\"','\"SkinThick\"','\"TwoHourSerIns\"','\"BMI\"','\"DiPedFunc\"','\"Age\"')\n",
       ") as sqlmr\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wf250003/anaconda3/envs/caixa/lib/python3.5/re.py:203: FutureWarning: split() requires a non-empty pattern match.\n",
+      "  return _compile(pattern, flags).split(string, maxsplit)\n"
      ]
     }
    ],
@@ -414,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -422,16 +402,16 @@
      "output_type": "stream",
      "text": [
       "  tree_id iter class_num                                               tree                                  region_prediction\n",
-      "0       2    1         1  {\"sum_\":-46.0,\"sumSq_\":74.5,\"size_\":298,\"id_\":...  {\"13\":-0.04285714,\"16\":-0.094444446,\"21\":0.019...\n",
-      "1       2   10         0  {\"sum_\":24.391835209999986,\"sumSq_\":33.4776125...  {\"1024\":0.05834355,\"1280\":0.033159707,\"1281\":0...\n",
-      "2       3    4         1  {\"sum_\":-38.751830049999995,\"sumSq_\":56.425578...  {\"256\":-0.016835004,\"257\":-0.027845753,\"1794\":...\n",
-      "3       3    6         1  {\"sum_\":-36.2465111,\"sumSq_\":49.4259252462927,...  {\"1024\":-0.015841413,\"1025\":-0.040347546,\"513\"...\n",
-      "4       3    5         1  {\"sum_\":-37.396826979999986,\"sumSq_\":52.652613...  {\"512\":-0.01613217,\"1026\":-0.016524961,\"1794\":...\n",
-      "5       3    7         0  {\"sum_\":35.14215717000001,\"sumSq_\":46.19626374...  {\"1792\":-0.01688014,\"1024\":0.015930202,\"1025\":...\n",
-      "6       2    3         1  {\"sum_\":-39.39716149000002,\"sumSq_\":58.7615203...  {\"1024\":-0.05706412,\"1025\":-0.016944634,\"258\":...\n",
-      "7       2    7         0  {\"sum_\":30.98688837,\"sumSq_\":42.76673450168673...  {\"1024\":0.04520504,\"1025\":0.015808495,\"1026\":0...\n",
-      "8       2   10         1  {\"sum_\":-24.391835479999997,\"sumSq_\":33.477612...  {\"1024\":-0.05834355,\"1280\":-0.033159707,\"1281\"...\n",
-      "9       2    9         1  {\"sum_\":-26.57627442000002,\"sumSq_\":36.3569859...  {\"256\":-0.01316896,\"257\":-0.013193884,\"265\":0....\n"
+      "0       5    6         0  {\"sum_\":25.602885899999972,\"sumSq_\":47.5346826...  {\"1024\":0.046061024,\"1025\":0.06826088,\"1026\":0...\n",
+      "1       5    5         0  {\"sum_\":27.416003110000005,\"sumSq_\":51.2420506...  {\"1024\":0.03925079,\"1025\":0.026378963,\"1026\":0...\n",
+      "2       5    6         1  {\"sum_\":-25.602885400000016,\"sumSq_\":47.534682...  {\"1024\":-0.046061028,\"1025\":-0.06826088,\"1026\"...\n",
+      "3       5    7         0  {\"sum_\":23.69428876999997,\"sumSq_\":43.91917691...  {\"1024\":0.044079605,\"1025\":0.06506924,\"1026\":0...\n",
+      "4       4    8         1  {\"sum_\":-33.319776039999994,\"sumSq_\":38.100023...  {\"8\":0.017435025,\"21\":0.017435025,\"24\":-0.0263...\n",
+      "5       5    5         1  {\"sum_\":-27.41600071999998,\"sumSq_\":51.2420495...  {\"1024\":-0.03925079,\"1025\":-0.026378963,\"1026\"...\n",
+      "6       4    8         0  {\"sum_\":33.31977638999997,\"sumSq_\":38.10002362...  {\"8\":-0.017435024,\"20\":-0.017435024,\"24\":0.026...\n",
+      "7       4    7         1  {\"sum_\":-35.450780689999995,\"sumSq_\":40.995696...  {\"8\":0.017771015,\"20\":0.017771015,\"24\":-0.0271...\n",
+      "8       5    8         1  {\"sum_\":-21.79573562999998,\"sumSq_\":40.9345038...  {\"1024\":-0.044942282,\"1025\":-0.03385619,\"513\":...\n",
+      "9       5    8         0  {\"sum_\":21.79573459999998,\"sumSq_\":40.93450295...  {\"1024\":0.04494228,\"1025\":0.03385619,\"513\":0.0...\n"
      ]
     }
    ],
@@ -440,12 +420,14 @@
     "# copy_to_sql(xgb.model_table, \"pima_model\", if_exists=\"replace\")\n",
     "# there is a way to specify the schema during a table creation but I can't find it..\n",
     "# force execution (lazy otherwize)\n",
-    "print(xgb.model_table)"
+    "print(xgb.model_table)\n",
+    "\n",
+    "xgb.model_table.to_sql(table_name=\"PIMA_MODEL\", if_exists=\"replace\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +437,7 @@
       "SELECT * FROM XGBoostPredict(\n",
       "\tON \"PIMA_TEST\" AS \"input\"\n",
       "\tPARTITION BY ANY\n",
-      "\tON \"VANTAGE\".\"ml__td_xgboost0_1568215804686830\" AS ModelTable\n",
+      "\tON \"PIMA_MODEL\" AS ModelTable\n",
       "\tDIMENSION\n",
       "\tORDER BY \"tree_id\",\"iter\",\"class_num\"\n",
       "\tUSING\n",
@@ -466,7 +448,8 @@
     }
    ],
    "source": [
-    "xgb_predicted = XGBoostPredict(object = xgb.model_table,\n",
+    "model = DataFrame(\"PIMA_MODEL\")\n",
+    "xgb_predicted = XGBoostPredict(object = model,\n",
     "                               newdata = df_test, \n",
     "                               id_column = 'idx',\n",
     "                               object_order_column=['tree_id', 'iter', 'class_num'],\n",
@@ -475,32 +458,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "   idx HasDiabetes prediction  confidence_lower  confidence_upper\n",
-       "0  602           0          0               1.0               1.0\n",
-       "1  604           1          0               0.5               0.5\n",
-       "2  605           0          0               1.0               1.0\n",
-       "3  606           1          1               1.0               1.0\n",
-       "4  608           0          0               0.5               0.5\n",
-       "5  609           0          0               1.0               1.0\n",
-       "6  607           0          0               1.0               1.0\n",
-       "7  603           1          0               0.5               0.5\n",
-       "8  601           0          0               1.0               1.0\n",
-       "9  600           0          0               1.0               1.0"
+       "  tree_id iter class_num                                               tree                                  region_prediction\n",
+       "0       4    8         0  {\"sum_\":33.31977638999997,\"sumSq_\":38.10002362...  {\"8\":-0.017435024,\"20\":-0.017435024,\"24\":0.026...\n",
+       "1       4    3         0  {\"sum_\":45.89293113999996,\"sumSq_\":57.95448035...  {\"8\":-0.019214401,\"20\":-0.019214401,\"24\":0.030...\n",
+       "2       4    2         1  {\"sum_\":-49.2413891299999,\"sumSq_\":64.09951866...  {\"8\":0.019601619,\"1804\":0.031160424,\"1805\":0.0...\n",
+       "3       4   10         0  {\"sum_\":29.79768822,\"sumSq_\":33.17153981214950...  {\"260\":0.015629984,\"261\":0.015555485,\"262\":0.0...\n",
+       "4       4   10         1  {\"sum_\":-29.79768797000003,\"sumSq_\":33.1715395...  {\"256\":-0.015629983,\"257\":-0.015555482,\"258\":-...\n",
+       "5       4    1         0  {\"sum_\":54.0,\"sumSq_\":74.0,\"size_\":296,\"id_\":1...  {\"8\":-0.019999998,\"12\":0.05,\"146\":-0.019999998...\n",
+       "6       4    4         1  {\"sum_\":-42.889883430000005,\"sumSq_\":52.586603...  {\"8\":0.018838037,\"1804\":0.01771014,\"1805\":0.02...\n",
+       "7       4    5         1  {\"sum_\":-40.21089968000004,\"sumSq_\":48.1650140...  {\"8\":0.01847222,\"1804\":0.017517272,\"1805\":0.01...\n",
+       "8       4    6         1  {\"sum_\":-37.854675800000024,\"sumSq_\":44.348257...  {\"8\":0.01811665,\"21\":0.01811665,\"24\":-0.027957...\n",
+       "9      -1   -1        -1  {\"classifier\":\"CLASSIFICATION\",\"lossType\":\"SOF...                                                   "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xgb_predicted.result.head()"
+    "model.head()"
    ]
   },
   {
@@ -897,35 +882,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch master\n",
-      "Your branch is up to date with 'origin/master'.\n",
-      "\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
-      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
-      "\n",
-      "\t\u001b[31mmodified:   ../../../../../README.md\u001b[m\n",
-      "\t\u001b[31mmodified:   ../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/__init__.py\u001b[m\n",
-      "\t\u001b[31mmodified:   ../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/scoring.py\u001b[m\n",
-      "\t\u001b[31mmodified:   ../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/training.py\u001b[m\n",
-      "\t\u001b[31mmodified:   Explore Diabetes Vantage.ipynb\u001b[m\n",
-      "\n",
-      "Untracked files:\n",
-      "  (use \"git add <file>...\" to include in what will be committed)\n",
-      "\n",
-      "\t\u001b[31m../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/notebooks/\u001b[m\n",
-      "\t\u001b[31m../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/scoring.sql\u001b[m\n",
-      "\t\u001b[31m../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/training.sql\u001b[m\n",
-      "\t\u001b[31m../../../../78036940-248e-4dae-b690-6f70eefcb188/DOCKER/model_modules/util.py\u001b[m\n",
-      "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+      "On branch issue-105\r\n",
+      "Your branch is up to date with 'origin/issue-105'.\r\n",
+      "\r\n",
+      "Changes not staged for commit:\r\n",
+      "  (use \"git add <file>...\" to update what will be committed)\r\n",
+      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\r\n",
+      "\r\n",
+      "\t\u001b[31mmodified:   Explore Diabetes Vantage.ipynb\u001b[m\r\n",
+      "\r\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\r\n"
      ]
     }
    ],
