--- a/model_definitions/149e31ed-c554-46b4-95d2-00c5c43320fb/notebooks/Sample pyspark LR.ipynb
+++ b/model_definitions/149e31ed-c554-46b4-95d2-00c5c43320fb/notebooks/Sample pyspark LR.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
